--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,8 +1,10 @@
-all:clang_target1 gcc_target1
+FLAGS := -Wall -Wextra -pedantic -std=c++1z
+INCLUDE_PATH := -I../
 
-clang_target1: range_adaptor_print_exp.cpp
-	clang-5.0 -lstdc++ -Wall -Wextra -pedantic -std=c++1z -I../ range/adaptor/print_exp.cpp -o 0x01_clang.out
-gcc_target1: range_adaptor_print_exp.cpp
-	g++-6 -Wall -Wextra -pedantic -std=c++1z -I../ range/adaptor/print_exp.cpp -o 0x01_gcc.out
+all:clang_target1 gcc_target1
+clang_target1: range/adaptor/adaptor_exp.cpp
+	clang -lstdc++ $(FLAGS) $(INCLUDE_PATH) range/adaptor/adaptor_exp.cpp -o 0x01_clang.out
+gcc_target1: range/adaptor/adaptor_exp.cpp
+	g++ $(FLAGS) $(INCLUDE_PATH) range/adaptor/adaptor_exp.cpp -o 0x01_gcc.out
 clean:
 	$(RM) 0x01_clang.out 0x01_gcc.out
