--- a/tests/Makefile
+++ b/tests/Makefile
@@ -3,8 +3,8 @@ INCLUDE_PATH := -I../
 
 all:clang_target1 gcc_target1
 clang_target1: range/adaptor/adaptor_exp.cpp
-	clang -lstdc++ $(FLAGS) $(INCLUDE_PATH) range/adaptor/adaptor_exp.cpp -o 0x01_clang.out
+	clang-5.0 -lstdc++ $(FLAGS) $(INCLUDE_PATH) range/adaptor/adaptor_exp.cpp -o 0x01_clang.out
 gcc_target1: range/adaptor/adaptor_exp.cpp
-	g++ $(FLAGS) $(INCLUDE_PATH) range/adaptor/adaptor_exp.cpp -o 0x01_gcc.out
+	g++-6 $(FLAGS) $(INCLUDE_PATH) range/adaptor/adaptor_exp.cpp -o 0x01_gcc.out
 clean:
 	$(RM) 0x01_clang.out 0x01_gcc.out
