--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ script:
         - clang-5.0 --version
         - g++-6 --version
         - cd tests && make
-        - ./0x01_clang.out && ./0x01_gcc.out
+        - tests/0x01_clang.out && tests/0x01_gcc.out
         - make clean
 compiler:
         - clang
