--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ install:
         - sudo add-apt-repository --yes 'deb http://us.archive.ubuntu.com/ubuntu wily main universe'
         - sudo apt-get -qq update
         - sudo apt-get -qq install clang-5.0
-        - sudo apt-get -qq install libboost*-all-dev
+        - sudo apt-get -qq install libboost-all-dev
         - sudo apt-get -qq install g++-6
