--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,7 +1,7 @@
 FLAGS := -Wall -Wextra -pedantic -std=c++1z
 INCLUDE_PATH := -I../
 CLANG = clang++-5.0
-GXX = gcc-6
+GXX = g++-6
 
 all:clang_target1 gcc_target1
 clang_target1: range/adaptor/adaptor_exp.cpp
