add monad to optional

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -17,6 +17,7 @@ TEST1 = cxx17/array_view/at_test.o\
 	optional/requirements.o\
 	optional/make_optional.o\
 	optional/swap.o\
+	optional/monad.o\
 	semaphore/t.o\
 	semaphore/t1.o
 
@@ -34,6 +35,7 @@ run:
 	./optional/requirements.o $(BOOST_TEST_OP)
 	./optional/make_optional.o $(BOOST_TEST_OP)
 	./optional/swap.o $(BOOST_TEST_OP)
+	./optional/monad.o $(BOOST_TEST_OP)
 	./semaphore/t.o $(BOOST_TEST_OP)
 	./semaphore/t1.o
 clean:
