--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: cpp
+os: 
+        - linux
+sudo: required
+dist: trusty
 script:
         - g++-7 --version
         - cd tests && make && make run
@@ -6,20 +10,27 @@ script:
         - make -f Makefile.zlib run
         - make -f Makefile.zlib clean
 compiler:
-        - gcc-7
+        - gcc
 before_install:
-    - sudo apt remove -qq -y postgresql-9.1 postgresql-9.2 postgresql-9.3 postgresql-9.4 postgresql-9.6 postgresql-contrib-9.6
-    - sudo apt -qq -y update 
-    - sudo apt -qq upgrade -y -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" --allow-unauthenticated
-    - sudo apt -qq dist-upgrade -y
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt remove -qq -y postgresql-9.1 postgresql-9.2 postgresql-9.3 postgresql-9.4 postgresql-9.6 postgresql-contrib-9.6; fi
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt -qq -y update; fi
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt -qq upgrade -y -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" --allow-unauthenticated; fi
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt -qq dist-upgrade -y; fi
+    - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew update; brew upgrade; fi
 install:
-    - sudo apt -qq -y install build-essential software-properties-common zlib1g-dev
-    - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-    - sudo apt -qq update -y
-    - sudo apt -qq install gcc-7 g++-7 -y
-    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 60 --slave /usr/bin/g++ g++ /usr/bin/g++-7
-    - sudo update-alternatives --config gcc
-    - sudo apt -qq -y install cppcheck
-    - wget -O boost_1_64_0.tar.gz http://sourceforge.net/projects/boost/files/boost/1.64.0/boost_1_64_0.tar.gz/download
-    - tar xzf boost_1_64_0.tar.gz
-    - mv boost_1_64_0/boost .
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt -qq -y install build-essential software-properties-common zlib1g-dev; fi
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y; fi
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt -qq update -y; fi
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt -qq install gcc-7 g++-7 subversion make cmake python libtool zlib1g zlib1g-dev -y; fi
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 60 --slave /usr/bin/g++ g++ /usr/bin/g++-7; fi
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo update-alternatives --config gcc; fi
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt -qq -y install cppcheck; fi
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt -y -qq install; fi
+    - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install gcc; brew install clang; brew install cppcheck; fi
+    - wget -O boost_1_65_1.tar.gz http://sourceforge.net/projects/boost/files/boost/1.65.1/boost_1_65_1.tar.gz/download
+    - tar xzf boost_1_65_1.tar.gz
+    - cd boost_1_65_1
+    - ./bootstrap.sh
+    - ./b2 link=static,shared install -d0 -j3 --prefix=../ --with-program_options
+    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:../lib; fi
+    - cd ../
