add sha-2(sha224, sha256, sha384, sha512, sha512/224, sha512/256) hash algorithm

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -26,7 +26,8 @@ TEST1 = cxx17/array_view/at_test.o\
 	semaphore/t1.o\
 	expected/test.o\
 	memory/singleton/singleton.o\
-	thread/safe/memory/singleton/test1.o
+	thread/safe/memory/singleton/test1.o\
+	hash/sha2/sha2_test.o
 
 all: gcc_target1
 
@@ -48,5 +49,6 @@ run:
 	./expected/test.o $(BOOST_TEST_OP)
 	./memory/singleton/singleton.o $(BOOST_TEST_OP)
 	./thread/safe/memory/singleton/test1.o $(BOOST_TEST_OP)
+	./hash/sha2/sha2_test.o $(BOOST_TEST_OP)
 clean:
 	$(RM) $(TEST1)
