--- a/tests/Makefile.zlib
+++ b/tests/Makefile.zlib
@@ -6,24 +6,27 @@ GXX := g++-7
 INCLUDE_DIR := -I../ -I../include
 FLAGS := -Wall -Wextra -pedantic -std=c++1z
 LIBS := -L../lib -lboost_program_options -lz -pthread
-TARGET := ./algorithm/coding/zlib/zlib_test.cpp
+TARGET1 := ./algorithm/coding/zlib/zlib_test.cpp
+TARGET2 := ./algorithm/coding/zlib/blob_decompress.cpp
 
 all: test
 
-test: $(TARGET)
-	$(GXX) $(INCLUDE_DIR) $(TARGET) $(LIBS) $(FLAGS)
+test: $(TARGET1) $(TARGET2)
+	$(GXX) $(INCLUDE_DIR) $(TARGET1) $(LIBS) $(FLAGS) -o zlib1.o
+	$(GXX) $(INCLUDE_DIR) $(TARGET2) $(LIBS) $(FLAGS) -o zlib2.o
 run: test
-	./a.out -h
+	./zlib1.o -h
 	wget -q http://www.gutenberg.org/files/45/45-0.txt
 	head -n 15 45-0.txt
-	./a.out -c 6 -i 45-0.txt
+	./zlib1.o -c 6 -i 45-0.txt
 	file 45-0.txt_out
 	wc 45-0.txt 45-0.txt_out
-	./a.out -d -i 45-0.txt_out
+	./zlib1.o -d -i 45-0.txt_out
 	diff -q 45-0.txt 45-0.txt_out_out	
 	gzip 45-0.txt
-	./a.out -d -i 45-0.txt.gz
+	./zlib1.o -d -i 45-0.txt.gz
 	diff -q 45-0.txt.gz_out  45-0.txt_out_out
-
+	git clone https://github.com/falgon/git_playground.git
+	./zlib2.o git_playground/.git/objects/ce/013625030ba8dba906f756967f9e9ca394464a # say hello
 clean:
-	$(RM) a.out 45-0.txt 45-0.txt_out 45-0.txt_out_out 45-0.txt.gz 45-0.txt.gz_out
+	$(RM) -r git_playground zlib1.o zlib2.o 45-0.txt 45-0.txt_out 45-0.txt_out_out 45-0.txt.gz 45-0.txt.gz_out
